# hotels_study_project

./: alembic.ini  main.py  pyproject.toml
src/: config.py  database.py  main.py
src/api/: dependencies.py  hotels.py
src/migrations/: env.py
src/migrations/versions/: 0f97f1d20c50_initial_migraiton.py  2026_06_17_1206-c9173d676d1e_add_rooms.py
src/models/: hotels.py  rooms.py
